# Modern-Borsdata-Client

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_all_tests.py  run_tests.sh  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-tests.yml
docs/: index.md
docs/api/: client.md  models.md
docs/examples/: advanced_usage.md  basic_usage.md
docs/guides/: advanced_usage.md  getting_started.md
examples/: README.md  basic_usage.py  portfolio_analysis.py  stock_visualization.py
src/borsdata_client/: __init__.py  client.py  models.py
src/mcp_server/: ARCHITECTURE.md  QUICKSTART.md  README.md  TESTING.md  USAGE_GUIDE.md  __init__.py  __main__.py  requirements.txt  server.py  test_server.py
tests/: README.md  conftest.py  test_client.py  test_edge_cases.py  test_endpoints.py  test_errors.py  test_integration.py  test_model_validation.py  test_models.py  test_performance.py
tests/fixtures/: branches.json  countries.json  holdings_buyback.json  holdings_insider.json  instruments.json  instruments_1_calendar_dividend.json  instruments_1_calendar_report.json  instruments_1_descriptions.json  instruments_1_kpis_2_year_mean_history.json  instruments_1_reports_year.json  instruments_1_stockprices.json  instruments_global.json  instruments_kpis_metadata.json  instruments_kpis_updated.json  instruments_shorts.json  instruments_stockprices_date.json  instruments_stockprices_global_date.json  instruments_stockprices_global_last.json  instruments_stockprices_last.json  instruments_stocksplits.json  markets.json  translationmetadata.json
